package factory;

import strategy.ParkingFeeStrategy;
import utils.Vehicle;
import utils.VehicleType;

public class VehicleFactory {

    public static Vehicle createVehicle(String licensePlate, VehicleType vehicleType, ParkingFeeStrategy feeStrategy){
        return null;
    }

}
