package helper;

import utils.ParkingLot;

public class ParkingLotBuilder {

    ParkingLot parkingLot = new ParkingLot();

}
