package strategy.payment;

import strategy.Payment;

public class CashPayment implements Payment {
    @Override
    public void makePayment(double amount) {

    }
}
