package strategy.payment;

import strategy.Payment;

public class CreditCardPayment implements Payment {
    @Override
    public void makePayment(double amount) {

    }
}