package strategy.payment;

import strategy.Payment;

public class DebitCardPayment implements Payment {
    @Override
    public void makePayment(double amount) {

    }
}