package utils;

public enum DurationType {
    HOUR,
    MIN
}
