package utils;

import java.util.List;

public class ParkingFloor {
    private List<ParkingSpot> parkingSpots;
}
