package utils;

import java.util.List;

public class ParkingLot {
    private String parkingLotName;
    private List<ParkingFloor> floors;
}
