package utils;

public enum SpotStatus {
    AVAILABLE,
    OCCUPIED,
    MAINTENANCE
}
